--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 arrow~=1.2.3
+beautifulsoup4~=4.12.2
 matplotlib~=3.7.1
 pandas~=1.5.3
-seaborn~=0.12.2
-scikit-learn~=1.2.2
-
-beautifulsoup4~=4.12.2
+plotly~=5.9.0
 pyppeteer~=1.0.2
+scikit-learn~=1.2.2
 scrapetube~=2.3.1
+seaborn~=0.12.2
