--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 arrow~=1.2.3
 beautifulsoup4~=4.12.2
+holoviews~=1.16.2
 matplotlib~=3.7.1
+numpy~=1.24.3
 pandas~=1.5.3
 plotly~=5.9.0
 pyppeteer~=1.0.2
